tests/auto/qml/qmllint/data/anchors1.qml
@@ -1,0 +1,8 @@
+import QtQuick 2.15
+
+Rectangle {
+    anchors {
+        horizontalCenter: parent.horizontalCenter
+        verticalCenter: parent.verticalCenter
+    }
+}
