tests/auto/qml/qmllint/data/anchors3.qml
@@ -1,0 +1,6 @@
+import QtQuick 2.15
+
+Rectangle {   
+    anchors.horizontalCenter: parent
+    anchors.verticalCenter: parent
+}
