tests/auto/qml/qmllint/data/nanchors1.qml
@@ -1,0 +1,8 @@
+import QtQuick 2.15
+
+Rectangle {
+    nanchors {
+        horizontalCenter: parent.horizontalCenter
+        verticalCenter: parent.verticalCenter
+    }
+}
