tests/auto/qml/qmllint/data/nanchors3.qml
@@ -1,0 +1,6 @@
+import QtQuick 2.15
+
+Rectangle {   
+    nanchors.horizontalCenter: parent
+    nanchors.verticalCenter: parent
+}
